--- a/static/styles/homepage/login.scss
+++ b/static/styles/homepage/login.scss
@@ -5,7 +5,7 @@
 	&:not(.demo-login){
 		border-radius: 0;
 		border: 1px solid var(--color-gray-light);
-		box-shadow: var(--shadow-md);
+		box-shadow: var(--shadow-sm);
 	}
     .btn{
         word-wrap: break-word;
