--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -39,11 +39,11 @@
                 an der Nutzung der HPI Schul-Cloud haben, senden Sie gerne folgende Informationen an
                 <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>:
                 <ul>
-                    <li>- Name der Schule und Schulform</li>
-                    <li>- Geschwindigkeit des Internetanschlusses in Ihrer Schule</li>
-                    <li>- Anzahl der W-LAN-Router mit Hinweis für welche Zielgruppen diese freigegeben sind (Lehrer, Schüler, beide)</li>
-                    <li>- Informationen darüber, ob Ihre Schule komplett mit W-LAN ausgeleuchtet ist oder nur teilweise</li>
-                    <li>- Anzahl der vorhandenen mobilen und webfähigen Endgeräte (Laptops, Tablets, etc.) oder ob der Bring-Your-Own-Device als Ansatz aktiv eingesetzt wird</li>
+                    <li>Name der Schule und Schulform</li>
+                    <li>Geschwindigkeit des Internetanschlusses in Ihrer Schule</li>
+                    <li>Anzahl der W-LAN-Router mit Hinweis für welche Zielgruppen diese freigegeben sind (Lehrer, Schüler, beide)</li>
+                    <li>Informationen darüber, ob Ihre Schule komplett mit W-LAN ausgeleuchtet ist oder nur teilweise</li>
+                    <li>Anzahl der vorhandenen mobilen und webfähigen Endgeräte (Laptops, Tablets, etc.) oder ob der Bring-Your-Own-Device als Ansatz aktiv eingesetzt wird</li>
                 </ul>
             </p>
             <p>Gerne können Sie außerdem <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/flyer/Schul-Cloud_Technische_Vorbereitungen.pdf" target="_blank">hier</a> einsehen, welche Hinweise bei der Vorbereitung auf eine mögliche HPI Schul-Cloud Nutzung helfen können.</p>
