--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -30,7 +30,7 @@
 											</button>
 											<div class="row">
 												<div class="col-md-5">
-													<div data-tilt data-tilt-glare data-tilt-max-glare="0.8">
+													<div>
 														<img class="image" src="{{pictureUrl}}">
 													</div>
 												</div>
