--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -16,7 +16,7 @@
 						<h4>Links</h4>
 						<ul>
 							<li><a href="/impressum" target="blank">Impressum</a></li>
-							<li>Datenschutzerklärung: <br/><a href="/impressum#data_security" target="blank">HPI</a> / <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="blank">Muster Schulen</a></li>
+							<li>Datenschutzerklärung: <a href="/impressum#data_security" target="blank">HPI</a> / <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="blank">Muster Schulen</a></li>
 							<li><a href="/team" target="blank">Team</a></li>
 							<li><a href="/partner" target="blank">Partner</a></li>
 							<li><a href="/about" target="blank">Über das Projekt</a></li>
