--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -26,7 +26,7 @@
                 Unterstützung bei der Anmeldung und Nutzung sowie Möglichkeiten das Pilotprojekt aktiv mitzugestalten. Bei Fragen wenden Sie sich gerne an das Team „HPI Schul-Cloud“ von MINT-EC:
                 <ul>
                     <li>E-Mail: <a href="mailto:schul-cloud@mint-ec.de">schul-cloud@mint-ec.de</a></li>
-                    <li>Telefon: 030 400 067 47</li>
+                    <li>Telefon: +49 (0)30 400 067 47</li>
                 </ul>
 
             </p>
