some small adjustments

--- a/views/authentication/blog-card.hbs
+++ b/views/authentication/blog-card.hbs
@@ -1,17 +1,21 @@
-<article class="blog-card" onclick="window.open('{{article.url}}','_blank')">
-	<img class="thumbnail" alt="{{article.img.title}}" src="{{article.img.src}}">
-	<div class="body">
-		<h2 class="heading">
-			<div class="title">
-				{{article.title}}
-			</div>
-			<small class="pub-date">{{article.pubDate}}</small>
-		</h2>
-		<p class="description">{{truncatePure (stripHTMLTags article.description) 200}}</p>
-	</div>
-	<div>
-		<!--<a class="btn btn-primary btn-outline article-more" target="_blank">
-			Artikel öffnen
-		</a>-->
-	</div>
-</article>
+<a target="_blank" rel="noopener" href="{{article.url}}" class="blog-card">
+	<article >
+		<img class="thumbnail" alt="{{article.img.title}}" src="{{article.img.src}}">
+		<div class="body">
+			<h2 class="heading">
+				<div class="title">
+					{{article.title}}
+				</div>
+				<small class="pub-date">{{article.pubDate}}</small>
+			</h2>
+			<p class="description">{{truncatePure (stripHTMLTags article.description) 200}}</p>
+		</div>
+		<!--
+		<div>
+			<a class="btn btn-primary btn-outline article-more" target="_blank">
+				Artikel öffnen
+			</a>
+		</div>
+		-->
+	</article>
+</a>
