--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -15,18 +15,18 @@
 					<div  class="col-md-4">
 						<h4>Links</h4>
 						<ul>
-							<li><a href="/impressum" target="blank">Impressum</a></li>
-							<li>Datenschutzerklärung: <a href="/impressum#data_security" target="blank">HPI</a> / <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="blank">Muster Schulen</a></li>
-							<li><a href="/team" target="blank">Team</a></li>
-							<li><a href="/partner" target="blank">Partner</a></li>
-							<li><a href="/about" target="blank">Über das Projekt</a></li>
-							<li><a href="https://github.com/schul-cloud/" target="_blank">GitHub</a></li>
+							<li><a href="/impressum" target="_blank">Impressum</a></li>
+							<li>Datenschutzerklärung: <a href="/impressum#data_security" target="_blank">HPI</a> / <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank">Muster Schulen</a></li>
+							<li><a href="/team" target="_blank">Team</a></li>
+							<li><a href="/partner" target="_blank">Partner</a></li>
+							<li><a href="/about" target="_blank">Über das Projekt</a></li>
+							<li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
 						</ul>
 					</div>
 					<div class="col-md-4">
 						<h4>Mobile App</h4>
 						<div class="android-app">
-							<a href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+							<a href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' target="_blank" rel="noopener">
 								<img alt='Jetzt bei Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/de_badge_web_generic.png' height="70"/>
 							</a>
 						</div>
