--- a/static/styles/homepage/blog-card.scss
+++ b/static/styles/homepage/blog-card.scss
@@ -22,6 +22,7 @@
 	border: var(--border-width) solid var(--color-gray-light);
 	text-align: center;
 	width: 50ch;
+	margin-bottom: 1rem;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
