--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -1,19 +1,15 @@
 <header class="header">
 	<nav class="container">
 		<a id="title" href="/">
-			<img class="logo hidden-sm-up" alt="{{theme.title}}" src="/images/logo/HPI-Schul-Cloud-Bildmarke_transparent.svg" />
-			<img class="logo hidden-xs-down" alt="{{theme.title}}" src="/images/logo/HPI-Schul-Cloud_Wort-Bildmarke-Banner_transparent.svg" />
+			<img class="logo" alt="{{theme.title}}" src="/images/logo/HPI-Schul-Cloud_Wort-Bildmarke-Banner_transparent.svg" />
 		</a>
 		{{#unless hideMenu}}
 			<ul class="nav">
 				<li class="intro-trigger hidden-sm-down">
 					<a class="nav-link" href="#" onclick="startIntro()">Intro</a>
 				</li>
-				<li class="">
-					<a class="nav-link" href="/team">Team</a>
-				</li>
-				<li class="hidden-sm-down">
-					<a class="nav-link" href="/partner">Partner</a>
+				<li>
+					<a class="nav-link" href="/about">Über das Projekt</a>
 				</li>
 				<li>
 					<a class="nav-link" href="/community">Mitmachen</a>
