--- a/static/styles/homepage/homepage.scss
+++ b/static/styles/homepage/homepage.scss
@@ -1,3 +1,5 @@
+@import '../lib/bootstrap/scss/bootstrap';
+
 @import "./variables";
 @import "./layouts";
 @import "./header";
@@ -8,6 +10,7 @@ body {
     flex-direction: column;
     flex-wrap: nowrap;
     min-height: 100vh;
+    min-width: 300px;
 }
 main{
     margin-top: 6rem;
@@ -17,4 +20,10 @@ main{
 ul{
 	list-style-type: square;
 	padding-left: 1.2em;
+}
+
+h1.section-title{
+    @include media-breakpoint-down(md) {
+        font-size: 36px;
+    }
 }
