--- a/static/styles/homepage/layouts.scss
+++ b/static/styles/homepage/layouts.scss
@@ -12,9 +12,7 @@
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
     @include media-breakpoint-down(md) {
-        grid-gap: var(--space-md);
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+        display: block;
     }
 }
 
