--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -16,10 +16,11 @@
 						<h4>Links</h4>
 						<ul>
 							<li><a href="/impressum" target="_blank">Impressum</a></li>
-							<li>Datenschutzerklärung: <a href="/impressum#data_security" target="_blank">HPI</a> / <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank">Muster Schulen</a></li>
-							<li><a href="/team" target="_blank">Team</a></li>
-							<li><a href="/partner" target="_blank">Partner</a></li>
-							<li><a href="/about" target="_blank">Über das Projekt</a></li>
+							<li>Datenschutzerklärung: <a href="/impressum#data_security">HPI</a> / <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank">Muster Schulen</a></li>
+							<li><a href="/team">Team</a></li>
+							<li><a href="/partner">Partner</a></li>
+							<li><a href="/team">Team</a></li>
+							<li><a href="/partner">Partner</a></li>
 							<li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
 						</ul>
 					</div>
