some small offset adjustments

--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -197,7 +197,7 @@
             einen MOOC zu dem Thema <a href="https://mooc.house/courses/lernen40-2018" target="_blank">Lernen 4.0 - Möglichkeiten und Grenzen einer Digitalisierung im Bildungsbereich</a> durchgeführt.</p>
             <br/>
             <div class="embed-pdf">
-                <div class="row embed-pdf-row">
+                <div class="embed-pdf-row">
                     <div class="single-pdf col-xs-12 col-md-4" data-pdf="/other/pdf/GEI-Fachuebergreifende-Unterrichtsszenarien-und-Methoden.pdf">
                         <a href="#">
                             <div class="single-pdf-wrapper">
@@ -224,7 +224,7 @@
     {{/embed}}
     {{#embed "authentication/section" style="accent"}}
         {{#content "body"}}
-			<div class="center">
+			<div class="container center">
 
             <h3 class="section-title center">Veröffentlichungen</h3>
             <div class="embed-pdf">
