--- a/static/styles/homepage/header.scss
+++ b/static/styles/homepage/header.scss
@@ -21,7 +21,7 @@
         }
     }
     .logo{
-        height: 2.5rem;
+        height: 2.75rem;
     }
     .nav{
         display: flex;
@@ -56,6 +56,7 @@
             }
             .nav-link{
                 margin: 0;
+                margin-bottom: 4px;
             }
         }
     }
