small changes und SC-1539

--- a/static/styles/homepage/login.scss
+++ b/static/styles/homepage/login.scss
@@ -9,7 +9,8 @@
 	}
     .btn{
         word-wrap: break-word;
-        white-space: normal;
+		white-space: normal;
+		min-width: 22ch;
     }
     input {
         margin-bottom: 10px;
