--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -198,7 +198,7 @@
             <br/>
             <div class="embed-pdf">
                 <div class="row embed-pdf-row">
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="/other/pdf/GEI-Fachuebergreifende-Unterrichtsszenarien-und-Methoden.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Begleitmaterial/Broschuere_Die-Schul-Cloud-im-Unterricht-Fachuebergreifende-Unterrichtsszenarien-und-Methoden.pdf">
                         <a href="#">
                             <div class="single-pdf-wrapper">
                                 <b class="single-pdf-title">Die HPI Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
@@ -208,7 +208,16 @@
                             </div>
                         </a>
                     </div>
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="/other/pdf/Schul-Cloud-in-Unterricht-und-Schulalltag.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Begleitmaterial/Broschuere_Die-Schul-Cloud-im-Unterricht-und-Schulalltag-Mehrwert-und-Voraussetzungen.pdf">
+                        <a href="#">
+                            <div class="single-pdf-wrapper">
+                                <b class="single-pdf-title">Die HPI Schul-Cloud in Unterricht und Schulalltag - Mehrwert und Voraussetzungen</b>
+                                <br/>
+                                <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Schul-Cloud-in-Unterricht-und-Schulalltag.jpg" />
+                            </div>
+                        </a>
+                    </div>
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://s3.hidrive.strato.com/schul-cloud-hpi/Willkommenordner/Begleitmaterial/Broschuere_HPI-Schul-Cloud-und-Lernen-4.0.pdf">
                         <a href="#">
                             <div class="single-pdf-wrapper">
                                 <b class="single-pdf-title">Die HPI Schul-Cloud in Unterricht und Schulalltag - Mehrwert und Voraussetzungen</b>
