--- a/views/authentication/blog-card.hbs
+++ b/views/authentication/blog-card.hbs
@@ -10,8 +10,8 @@
 			</h2>
 			<p class="description text-dark">{{truncatePure (stripHTMLTags article.description) 200}}</p>
 		</div>
-		<div class="mb-1 open-link">
-			Artikel öffnen
+		<div class="mb-1">
+			<span class="open-link">Artikel öffnen</span>
 		</div>
 	</article>
 </a>
