center about button

--- a/static/styles/homepage/header.scss
+++ b/static/styles/homepage/header.scss
@@ -46,6 +46,10 @@
             flex-wrap: wrap;
             justify-content: center;
         }
+        .logo{
+            margin-top: .25em;
+            height: 2.25rem;
+        }
         .nav{
             text-align: center;
             display: block;
