--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -92,6 +92,11 @@
                 <ul>
                     <li>Mehr Informationen: <a href="/other/pdf/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.pdf" title="Initiates file download" target="_blank">Technischer Bericht: "Die HPI Schul-Cloud: Roll-Out einer Cloud-Architektur für Schulen in Deutschland" (.pdf)</a></li>
                 </ul>
+                <div class="text-center">
+                    <a href="/about"class="btn btn-outline btn-white-outlined mt-2">
+                        Über das Projekt
+                    </a>
+                </div>
             {{/content}}
         {{/embed}}
 
@@ -164,7 +169,7 @@
                 <h2 class="section-title center" style="max-width: 20ch; margin: 0 auto;">
                     Alle Neuigkeiten rund um die <span style="white-space: nowrap;">HPI Schul-Cloud</span> bequem in Ihrem Postfach:
                 </h2>
-                <a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" class="btn btn-outline btn-newsletter mt-2">
+                <a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" class="btn btn-outline btn-white-outlined mt-2">
                     Newsletter abonnieren
                 </a>
             </div>
