--- a/static/styles/homepage/index.scss
+++ b/static/styles/homepage/index.scss
@@ -26,13 +26,13 @@
     }
 }
 
-.section a.btn.btn-newsletter{
+.section a.btn.btn-white-outlined{
     display: inline-block;
     border: 1px solid var(--color-white);
-    text-decoration: none;
+		text-decoration: none;
     &:hover{
-		background-color: var(--color-white);
-		color: var(--color-accent);
+			background-color: var(--color-white);
+			color: var(--color-accent);
     }
 }
 
