--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -204,7 +204,7 @@
                                 <b class="single-pdf-title">Die HPI Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
                                     und Methoden</b>
                                 <br/>
-                                <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Die-Schul-Cloud-im-Unterricht-Fachuebergreifende-Unterrichtsszenarien.jpg" />
+                                <img class="single-pdf-thumbnail" src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/pdf/pdf-thumbnail-Die-Schul-Cloud-im-Unterricht-Fachuebergreifende-Unterrichtsszenarien.jpg" />
                             </div>
                         </a>
                     </div>
@@ -213,16 +213,16 @@
                             <div class="single-pdf-wrapper">
                                 <b class="single-pdf-title">Die HPI Schul-Cloud in Unterricht und Schulalltag - Mehrwert und Voraussetzungen</b>
                                 <br/>
-                                <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Schul-Cloud-in-Unterricht-und-Schulalltag.jpg" />
+                                <img class="single-pdf-thumbnail" src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/pdf/pdf-thumbnail-Schul-Cloud-in-Unterricht-und-Schulalltag.jpg" />
                             </div>
                         </a>
                     </div>
                     <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://s3.hidrive.strato.com/schul-cloud-hpi/Willkommenordner/Begleitmaterial/Broschuere_HPI-Schul-Cloud-und-Lernen-4.0.pdf">
                         <a href="#">
                             <div class="single-pdf-wrapper">
-                                <b class="single-pdf-title">Die HPI Schul-Cloud in Unterricht und Schulalltag - Mehrwert und Voraussetzungen</b>
+                                <b class="single-pdf-title">HPI Schul-Cloud und Lernen 4.0 - Best-Practice-Unterrichtsbeispiele für die Sekundarstufe</b>
                                 <br/>
-                                <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Schul-Cloud-in-Unterricht-und-Schulalltag.jpg" />
+                                <img class="single-pdf-thumbnail" src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/pdf/pdf-thumbnail-HPI-Schul-Cloud-und-Lernen-4.0.jpg" />
                             </div>
                         </a>
                     </div>
@@ -231,43 +231,40 @@
 
         {{/content}}
     {{/embed}}
-    {{#embed "authentication/section" style="accent"}}
+    {{#embed "authentication/section" style="accent" class="content-width-max"}}
         {{#content "body"}}
-			<div class="container center">
-
             <h3 class="section-title center">Veröffentlichungen</h3>
             <div class="embed-pdf">
                 <div class="row embed-pdf-row">
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="/other/pdf/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.pdf">
                             <div class="single-pdf-wrapper">
                         <a href="#">
                                 <b class="single-pdf-title">Technischer Bericht: Die HPI Schul-Cloud: Roll-Out einer Cloud-Architektur für Schulen in Deutschland</b>
                                 <br/>
-                                <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.jpg" />
+                                <img class="single-pdf-thumbnail" src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/pdf/pdf-thumbnail-Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.jpg" />
                         </a>
                             </div>
                     </div>
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="/other/pdf/Schulrechner-wandern-in-die-Cloud-2017.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Schulrechner-wandern-in-die-Cloud-2017.pdf">
                             <div class="single-pdf-wrapper">
                         <a href="#">
                                 <b class="single-pdf-title">Schulrechner wandern in die Cloud – Was bedeutet das für die unterschiedlichen Stakeholder?</b>
                                 <br/>
-                                <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Schulrechner-wandern-in-die-Cloud.jpg" />
+                                <img class="single-pdf-thumbnail" src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/pdf/pdf-thumbnail-Schulrechner-wandern-in-die-Cloud.jpg" />
                         </a>
                             </div>
                     </div>
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="/other/pdf/Konzept-und-Pilotierung-der-Schul-Cloud-2017.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Konzept-und-Pilotierung-der-Schul-Cloud-2017.pdf">
                             <div class="single-pdf-wrapper">
                         <a href="#">
                                 <b class="single-pdf-title">Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der HPI Schul-Cloud</b>
                                 <br/>
-                                <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Konzept-und-Pilotierung-der-Schul-Cloud-2017.jpg" />
+                                <img class="single-pdf-thumbnail" src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/pdf/pdf-thumbnail-Konzept-und-Pilotierung-der-Schul-Cloud-2017.jpg" />
                         </a>
                             </div>
                     </div>
                 </div> <!-- .row.embed-pdf-row -->
             </div> <!-- .container.embed-pdf -->
-			</div>
 			<div class="content-width-max">
 
             <h4>Weitere Veröffentlichungen</h4>
