--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -31,17 +31,17 @@
 }
 @include media-breakpoint-down(md) {
     .sc-card-wrapper:nth-child(n+4) {
-        display: none;  
+        display: none;
     }
 }
 @include media-breakpoint-down(lg) {
     .sc-card-wrapper:nth-child(n+4) {
-        display: none;  
+        display: none;
     }
 }
 @include media-breakpoint-down(xl) {
     .sc-card-wrapper:nth-child(n+5) {
-        display: none;  
+        display: none;
     }
 }
 
@@ -124,7 +124,7 @@
                     margin-top: 1px;
                     border-top-right-radius: 4px;
                     border-top-left-radius: 4px;
-                    padding: 0 0.5rem 0.5rem 0.5rem;
+                    padding: 0 0.5rem 0.5rem;
 
                     .card-title {
                         font-size:1.063rem;
@@ -141,7 +141,8 @@
                 }
 
                 .card-text{
-                    line-height: 130%;
+					line-height: 130%;
+					padding: 0 0.5rem 0.5rem;
                 }
 
                 &.disabled {
