--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -142,6 +142,7 @@
 
                 .card-text{
                     line-height: 130%;
+                    padding: .5rem;
                 }
 
                 &.disabled {
