--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -1,127 +1,132 @@
 {{#extend "lib/loggedin" notitle="true"}}
 
-{{#content "styles" mode="append"}}
-<link rel="stylesheet" href="/styles/courses/course.css" />
-<link rel="stylesheet" href="/styles/homework/homework.css" />
-<link rel="stylesheet" href="/vendor/jquery/jquery-ui.css" />
-{{/content}}
+    {{#content "styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/courses/course.css" />
+        <link rel="stylesheet" href="/styles/homework/homework.css" />
+        <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css" />
+    {{/content}}
 
-{{#content "scripts" mode="append"}}
-<script src="/scripts/jquery/jquery-ui.min.js" type="text/javascript" defer></script>
-<script src="/scripts/jquery/jquery.ui.touch-punch.js" type="text/javascript" defer></script>
-<script src="/scripts/courses.js" type="text/javascript" defer></script>
-<script src="/scripts/topic.js" type="text/javascript" defer></script>
-<script src="/scripts/tabbar.js" type="text/javascript" defer></script>
-{{/content}}
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/jquery/jquery-ui.min.js" type="text/javascript" defer></script>
+        <script src="/scripts/jquery/jquery.ui.touch-punch.js" type="text/javascript" defer></script>
+        <script src="/scripts/courses.js" type="text/javascript" defer></script>
+        <script src="/scripts/topic.js" type="text/javascript" defer></script>
+        <script src="/scripts/tabbar.js" type="text/javascript" defer></script>
+    {{/content}}
 
-  {{#content "page"}}
-    {{#userHasPermission "COURSE_EDIT"}}
-      <div class="dropdown dropdown-course minimal-button">
-        <a class="btn btn-sm dropdown-toggle btn-course-dropdown" title="Weiteres" data-toggle="dropdown">
-          <h1 id="page-title" class="course-headline h4">{{{stripOnlyScript ../name}}}</h4>
-          <i class="fa fa-cog i-cog"></i>
-        </a>
-        <div class="dropdown-menu dropdown-menu dropdown-menu-course">
-          <a href="/courses/{{../_id}}/edit" class="dropdown-item btn-course-edit">
-            <i class="fa fa-edit" aria-hidden="true"></i> Kurs bearbeiten/löschen
-        </a>
-        <a data-href="courses/{{../_id}}/" href="#" class="dropdown-item btn-create-invitation">
-            <i class="fa fa-envelope" aria-hidden="true"></i> zum Kurs einladen
-        </a>
-        <a class="dropdown-item btn-create-share-course" data-courseId="{{../_id}}">
-            <i class="fa fa-share" aria-hidden="true"></i> Kurs teilen
-        </a>
-        <a href="/courses/{{../_id}}/copy" class="dropdown-item">
-            <i class="fa fa-clone" aria-hidden="true"></i> Kurs klonen
-        </a>
-    </div>
-</div>
-{{/userHasPermission}}
-<div class="row description">
-    <div class="col-sm-12">
-        {{#if description}}
-        <p class="lead">Kursbeschreibung: {{{stripOnlyScript description}}}</p>
-        {{/if}}
-        {{#if nextEvent}}
-        <p class="text-muted">Nächste Unterrichtsstunde: {{nextEvent}}</p>
-        {{/if}}
-        <a href="{{filesUrl}}" class="btn btn-add btn-secondary pull-right">
-            <i class="fa fa-folder-open"></i>
-            Zu den Kursdateien
-        </a>
-    </div>
-    <section class="section-course">
-      <div class="course-card">
-        <div class="tabContainer" data-active-tab={{activeTab}}>
-          <div class="tabs" data-max-width="1024">
-            <button class="tab" data-tab="js-topics">
-              <span class="text">Themen <span class="count-badge" data-badge="{{lessons.length}}"/></span>
-            </button>
-            <button class="tab" data-tab="js-homeworks">
-              <span class="text">Aufgaben <span class="count-badge" data-badge="{{ add (arrayLength ../myhomeworks)  (arrayLength ../homeworks) }}"/></span>
-            </button>
-            <button class="tab" data-tab="js-tools">
-              <span class="text">Tools <span class="count-badge" data-badge="{{ltiToolIds.length}}"/></span>
-            </button>
-            <button class="tab" data-tab="js-groups">
-              <span class="text">Gruppen <span class="count-badge" data-badge="{{courseGroups.length}}"/></span>
-            </button>
-          </div>
+    {{#content "page"}}
+        {{#userHasPermission "COURSE_EDIT"}}
+            <div class="dropdown dropdown-course minimal-button">
+                <a class="btn btn-sm dropdown-toggle btn-course-dropdown" title="Weiteres" data-toggle="dropdown">
+                    <h4 id="page-title" class="course-headline">{{{stripOnlyScript ../name}}}</h4>
+                    <i class="fa fa-cog i-cog"></i>
+                </a>
+                <div class="dropdown-menu dropdown-menu dropdown-menu-course">
+                    <a href="/courses/{{../_id}}/edit" class="dropdown-item btn-course-edit">
+                        <i class="fa fa-edit" aria-hidden="true"></i> Kurs bearbeiten/löschen
+                    </a>
+                    <a data-href="courses/{{../_id}}/" href="#" class="dropdown-item btn-create-invitation">
+                        <i class="fa fa-envelope" aria-hidden="true"></i> zum Kurs einladen
+                    </a>
+                    <a class="dropdown-item btn-create-share-course" data-courseId="{{../_id}}">
+                        <i class="fa fa-share" aria-hidden="true"></i> Kurs teilen
+                    </a>
+                    <a href="/courses/{{../_id}}/copy" class="dropdown-item">
+                        <i class="fa fa-clone" aria-hidden="true"></i> Kurs klonen
+                    </a>
+                </div>
+            </div>
+        {{/userHasPermission}}
+        <div class="row description">
+            <div class="col-sm-12">
+                {{#if description}}
+                    <p class="lead">Kursbeschreibung: {{{stripOnlyScript description}}}</p>
+                {{/if}}
+                {{#if nextEvent}}
+                    <p class="text-muted">Nächste Unterrichtsstunde: {{nextEvent}}</p>
+                {{/if}}
+                <a href="{{filesUrl}}" class="btn btn-add btn-secondary pull-right">
+                    <i class="fa fa-folder-open"></i>
+                    Zu den Kursdateien
+                </a>
+            </div>
         </div>
-        <div class="sectionsContainer">
-          <div class="sections">
-            <!-- Themen -->
-            <div class="section" data-section="js-topics">
-              {{> "courses/components/topics"}}
+        <section class="section-course">
+            <div class="course-card">
+                <div class="tabContainer" data-active-tab={{activeTab}}>
+                    <div class="tabs" data-max-width="1024">
+                        <button class="tab" data-tab="js-topics">
+                            <span class="text">Themen <span class="count-badge"
+                                    data-badge="{{lessons.length}}" /></span>
+                        </button>
+                        <button class="tab" data-tab="js-homeworks">
+                            <span class="text">Aufgaben <span class="count-badge"
+                                    data-badge="{{ add (arrayLength ../myhomeworks)  (arrayLength ../homeworks) }}" /></span>
+                        </button>
+                        <button class="tab" data-tab="js-tools">
+                            <span class="text">Tools <span class="count-badge"
+                                    data-badge="{{ltiToolIds.length}}" /></span>
+                        </button>
+                        <button class="tab" data-tab="js-groups">
+                            <span class="text">Gruppen <span class="count-badge"
+                                    data-badge="{{courseGroups.length}}" /></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="sectionsContainer">
+                    <div class="sections">
+                        <!-- Themen -->
+                        <div class="section" data-section="js-topics">
+                            {{> "courses/components/topics"}}
+                        </div>
+                        <!--- Aufgaben -->
+                        <div class="section" data-section="js-homeworks">
+                            {{> "courses/components/tasks"}}
+                        </div>
+                        <!-- Tools -->
+                        <div name="js-tools-section" name="js-tools" class="section" data-section="js-tools">
+                            {{> "courses/components/tools"}}
+                        </div>
+                        <!-- Gruppen -->
+                        <div class="section" data-section="js-groups">
+                            {{> "courses/components/groups" id=../_id}}
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!--- Aufgaben -->
-            <div class="section" data-section="js-homeworks">
-              {{> "courses/components/tasks"}}
-            </div>
-            <!-- Tools -->
-            <div name="js-tools-section" name="js-tools" class="section" data-section="js-tools">
-              {{> "courses/components/tools"}}
-            </div>
-            <!-- Gruppen -->
-            <div class="section" data-section="js-groups">
-              {{> "courses/components/groups" id=../_id}}
-            </div>
-          </div>
-        </div>
-    </div>
 
-    {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
-    {{#content "body"}}
-    <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btn-close">
-            Abbrechen
-        </button>
+            {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+            {{#content "body"}}
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-close">
+                        Abbrechen
+                    </button>
 
-        <button type="submit" class="btn btn-primary btn-submit">
-            Löschen
-        </button>
-    </div>
+                    <button type="submit" class="btn btn-primary btn-submit">
+                        Löschen
+                    </button>
+                </div>
+            {{/content}}
+            {{/embed}}
+
+            {{#embed "lib/components/modal-form" class="invitation-modal"}}
+            {{#content "fields"}}
+                {{> "courses/forms/form-invitation"}}
+            {{/content}}
+            {{/embed}}
+
+            {{#embed "lib/components/modal-form" class="import-modal"}}
+            {{#content "fields"}}
+                {{> "courses/forms/form-import-topic"}}
+            {{/content}}
+            {{/embed}}
+
+            {{#embed "lib/components/modal-form" class="share-modal"}}
+            {{#content "fields"}}
+                {{> "topic/forms/form-share"}}
+            {{/content}}
+            {{/embed}}
+
+        </section>
     {{/content}}
-    {{/embed}}
-
-    {{#embed "lib/components/modal-form" class="invitation-modal"}}
-    {{#content "fields"}}
-    {{> "courses/forms/form-invitation"}}
-    {{/content}}
-    {{/embed}}
-
-    {{#embed "lib/components/modal-form" class="import-modal"}}
-    {{#content "fields"}}
-    {{> "courses/forms/form-import-topic"}}
-    {{/content}}
-    {{/embed}}
-
-    {{#embed "lib/components/modal-form" class="share-modal"}}
-    {{#content "fields"}}
-    {{> "topic/forms/form-share"}}
-    {{/content}}
-    {{/embed}}
-
-</section>
-{{/content}}
 {{/extend}}
