fix after merge

--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -55,7 +55,7 @@
                 {{/unless}}
 
                 <button class="btn btn-sm btn-secondary pull-right" id="edit-consent" type="button">bearbeiten <i class="fa fa-edit"></i></button>
-                <h5>Einwilligungen: {{{consentStatusIcon}}}</h5>
+                <h2 class="h5">Einwilligungen: {{{consentStatusIcon}}}</h2>
                 <div class="row" id="consents-overview">
                     {{#unless editTeacher}}
                         <div class="col-md-6">
