--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -290,4 +290,33 @@
 			</div>
             {{/content}}
     {{/embed}}
+    {{#embed "authentication/section" class="content-width-max"}}
+        {{#content "body"}}
+            <h3 class="section-title center">Unsere Auszeichnungen</h3>
+            <div class="embed-award">
+                <div class="row">
+                    <div class="single-award col-xs-12 col-md-6">
+                        <div class="single-award-wrapper">
+                            <a href="https://www.innovationspreis.de/preisträger-und-finalisten/preisträger/2018/" target="_blank">
+								<div class="row">
+									<b class="single-award-title col-md-6">Preisträger im "Innovationspreis Berlin Brandenburg 2018"</b>
+									<img class="single-award-thumbnail col-md-6" src="/images/awards/Innovationspreisträger-180208.jpg" />
+								</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="single-award col-xs-12 col-md-6">
+                        <div class="single-award-wrapper">
+                            <a href="https://hpi.de/pressemitteilungen/2017/schul-cloud-als-ausgezeichneter-ort-2017-praemiert.html" target="_blank">
+								<div class="row">
+									<b class="single-award-title col-md-6">Ernennung zum „Ausgezeichneten Ort“ im bundesweiten Wettbewerb „Land der Ideen“</b>
+									<img class="single-award-thumbnail col-md-6" src="/images/awards/Land-der-Ideen-2017.jpg" />
+								</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {{/content}}
+    {{/embed}}
 </section>
