--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -4,7 +4,7 @@
             {{#unless loggedin}}
 				<h2 class="section-title center">{{title}}</h2>
             {{/unless}}
-            <h3 class="section-title center">Über die HPI Schul-Cloud</h3>
+            <h2 class="h3 section-title center">Über die HPI Schul-Cloud</h2>
             <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/" target="_blank">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von über 300 Schulen bundesweit und unterstützt vom Bundesministerium für Bildung und Forschung die HPI Schul-Cloud. Sie soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
             <ul>
                 <li>Mehr Informationen:
@@ -183,7 +183,7 @@
     {{#embed "authentication/section" class="content-width-max"}}
         {{#content "body"}}
 
-            <h3 class="section-title center">Bildungswissenschaftliche Begleitung</h3>
+            <h2 class="h3 section-title center">Bildungswissenschaftliche Begleitung</h2>
             <p>Zur pädagogisch-didaktischen Unterstützung des Projekts im Sinne der Entwicklung von Beispielen für die
 			Unterrichtsgestaltung
 			mit verfügbarem digitalen Lernmaterial aus der HPI Schul-Cloud und dem Erkenntnisgewinn über die digitale
@@ -233,7 +233,7 @@
     {{/embed}}
     {{#embed "authentication/section" style="accent" class="content-width-max"}}
         {{#content "body"}}
-            <h3 class="section-title center">Veröffentlichungen</h3>
+            <h2 class="h3 section-title center">Veröffentlichungen</h2>
             <div class="embed-pdf">
                 <div class="row embed-pdf-row">
                     <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.pdf">
@@ -292,7 +292,7 @@
     {{/embed}}
     {{#embed "authentication/section" class="content-width-max"}}
         {{#content "body"}}
-            <h3 class="section-title center">Unsere Auszeichnungen</h3>
+            <h2 class="h3 section-title center">Unsere Auszeichnungen</h2>
             <div class="embed-award">
                 <div class="row">
                     <div class="single-award col-xs-12 col-md-6">
