add class functionality

--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -90,6 +90,22 @@
     </div>
 
     <div class="mb-3">
+        <h4>
+            Einwilligung erteilen
+        </h4>
+        <p>
+            Du kannst die Einverständniserklärungen für Deine Schüler auch in Papierform von den Eltern erhalten. Sobald Du alle Einverständniserklärungen erhalten
+            hast, kannst Du hier im Namen deines Kurses die Einwilligung erteilen. 
+        </p> 
+        
+            <button data-class="{{class._id}}" class="btn btn-primary btn-skip-consent">
+                        <i class="fa fa-exclamation-triangle"></i> Einwilligung für alle Schüler erteilen
+            </button>
+        
+        
+    </div>
+
+    <div class="mb-3">
         <h4>Einladungslink</h4>
         <input id="invitationLink" class="w-100" value="{{invitationLink}}" readonly/>
 
