--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -126,6 +126,7 @@
                             title="Der Nutzer ist bereits registriert" {{/ifeq}}>
                             Persönlichen Einladungslink generieren
                         </button>
+                        {{/unless}}
                     </div>
 
                     <button class="btn btn-secondary btn-cancel">
