--- a/views/administration/users_registrationcomplete.hbs
+++ b/views/administration/users_registrationcomplete.hbs
@@ -1,25 +1,87 @@
-{{#content "scripts" mode="append"}}
-<script src="/scripts/administration/users_edit.js" type="text/javascript" defer></script>
-{{/content}}
 {{#content "styles" mode="append"}}
 <link rel="stylesheet" href="/styles/administration/users.css" />
 {{/content}}
 {{#extend "lib/loggedin"}}
+
 {{#content "page"}}
+<style>
+    .printonly {
+        display: none;
+    }
+
+    @media print {
+
+        aside,
+        footer, .mobile-nav-toggle {
+            display: none !important;
+        }
+
+        .printonly {
+            display: block;
+        }
+
+        .noprint {
+            display: none;
+        }
+
+        .pagebreak {
+            page-break-before: always;
+        }
+
+        table {
+            width: 100%
+        }
+    }
+</style>
 <div class="row">
     <div class="col-xl-6">
-        <p>Mit folgenden Daten kann sich {{name}} in der {{@root.theme.short_title}} anmelden. Bitte geben Sie die Daten
-            an das Kind weiter. </p>
-        <textarea disabled class="form-control" style="resize: none">
+        <p class="noprint">Mit den folgenden Daten kann sich nun an der {{@root.theme.short_title}} angemeldet werden. </p>
+
+        <div class="printonly">
+            <p>Auf dieser Seite findest Du eine Übersicht über alle erfolgten Einwilligungen und generierten Zugangsdaten. <br>
+            Die folgenden Seiten dieses Dokuments beinhalten jeweils die Zugangsdaten eines Kindes und eine Anleitung zur ersten Anmeldung. </p>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>E-Mail</th>
+                    <th>Passwort</th>
+                </tr>
+                {{#each users}}
+                <tr>
+                    <td>{{fullname}}</td>
+                    <td>{{email}}</td>
+                    <td>{{password}}</td>
+                </tr>
+                {{/each}}
+
+
+            </table>
+        </div>
+
+        {{#each users}}
+        <div class="pagebreak"> </div>
+        <div class="printonly">
+            <h1>{{fullname}}</h1>
+            <p>Du kannst Dich nun in der {{@root.theme.short_title}} mit Deinem Startpasswort einloggen.
+                Gehe dazu auf <a href="https://schul-cloud.org">https://schul-cloud.org</a>
+                und logge Dich dort mit den folgenden Zugansdaten ein:</p>
+        </div>
+        <textarea disabled class="printable form-control" style="resize: none; height: 80px">
+        {{fullname}}
         E-Mail: {{email}} 
         Passwort: {{password}}</textarea>
-        <p>Beim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre alt sind, müssen
+        {{/each}}
+        <p class="noprint">Beim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre
+            alt sind, müssen
             beim ersten Login die Einwilligungserklärung zusätzlich selbst bestätigen. </p>
     </div>
 </div>
-<div class="row">
+<div class="row noprint">
     <div class="modal-footer w-50">
-        <a class="btn btn-primary btn-submit" href="/administration/students">
+        <button onclick="window.print()" class="btn btn-secondary" href="/administration/students">
+            Schüleranleitungen und Liste drucken
+        </button>
+        <a class="btn btn-primary" href="/administration/students">
             {{submitLabel}}
         </a>
     </div>
