--- a/views/administration/users_registrationcomplete.hbs
+++ b/views/administration/users_registrationcomplete.hbs
@@ -36,9 +36,9 @@
 <div class="row">
     <div class="col-xl-6">
         <p class="noprint">Mit den folgenden Daten kann sich nun an der {{@root.theme.short_title}} angemeldet werden. </p>
-
+        {{#unless single}}
         <div class="printonly">
-            <p>Auf dieser Seite findest Du eine Übersicht über alle erfolgten Einwilligungen und generierten Zugangsdaten. <br>
+            <p>Auf dieser Seite findest du eine Übersicht über alle erfolgten Einwilligungen und generierten Zugangsdaten. <br>
             Die folgenden Seiten dieses Dokuments beinhalten jeweils die Zugangsdaten eines Kindes und eine Anleitung zur ersten Anmeldung. </p>
             <table>
                 <tr>
@@ -57,14 +57,17 @@
 
             </table>
         </div>
+        {{/unless}}
 
         {{#each users}}
+        {{#unless ../single}}
         <div class="pagebreak"> </div>
+        {{/unless}}
         <div class="printonly">
             <h1>{{fullname}}</h1>
-            <p>Du kannst Dich nun in der {{@root.theme.short_title}} mit Deinem Startpasswort einloggen.
+            <p>Du kannst dich nun in der {{@root.theme.short_title}} mit deinem Startpasswort einloggen.
                 Gehe dazu auf <a href="https://schul-cloud.org">https://schul-cloud.org</a>
-                und logge Dich dort mit den folgenden Zugansdaten ein:</p>
+                und logge dich dort mit den folgenden Zugansdaten ein:</p>
         </div>
         <textarea disabled class="printable form-control" style="resize: none; height: 80px">
         {{fullname}}
